fixed weird layout issue

--- a/src/views/IntroWhoAmI.css
+++ b/src/views/IntroWhoAmI.css
@@ -65,7 +65,7 @@
 }
 
 .h-intro {
-    height: 1080px*;
+    height: 1080px;
 }
 
 @media screen and (max-width: 976px) {
